--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = { version = "1.4.4", features = ["sqlite"] }
-dotenv = "0.15.0"
+rusqlite = "0.23.1"
 clap = "3.0.0-beta.1"
