--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ rusqlite = "0.23.1"
 clap = "3.0.0-beta.1"
 skim = "0.8.2"
 termion = "1.5.5"
+confy = "0.4.0"
+serde = { version = "1.0", features = ["derive"] }
