--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "work"
 version = "0.2.0"
 authors = ["g-w1 <jacoblevgw@gmail.com>"]
 license-file = "LICENSE"
-keywords = ["todo", "task management"]
+keywords = ["todo", "task_management"]
 description = "A simple cli todo manager"
 documentation = "https://github.com/g-w1/work"
 readme = "README.md"
